--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "font-awesome": "^4.7.0",
     "joi": "^17.3.0",
     "joi-browser": "^13.4.0",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.20",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-toastify": "^6.2.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
